@@ -1,0 +1,8 @@
+// Copyright (c) 2024 Yuki Kimoto
+// MIT License
+
+#include "spvm_native.h"
+
+#include <openssl/ssl.h>
+#include <openssl/err.h>
+
